# spef-check

./: CMakeLists.txt  functions.cmake  run_benchmark.sh
src/: CMakeLists.txt  spef_actions.cpp  spef_actions.hpp  spef_check.cpp  spef_random.hpp  spef_write.hpp
